# rbcpp

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md  config_example.json
include/config_parser/: config_parser.h
include/config_parser/exceptions/: config_parser_exception.h  config_parser_init_exception.h  config_parser_validity_exception.h
include/rbc/: ros_bridge_client.h  ros_bridge_client_impl.h
include/rbc/exceptions/: connection_exception.h  logger_init_exception.h
include/rbc/logging/: logger.h  logger_impl.h
include/rbc/msgs/: array_base.h  message.h  message_impl.h  rbc_array_message.h  ros_type_base.h  xyzmessage.h
include/rbc/msgs/geometry_msgs/: accel.h  accel_stamped.h  accel_with_covariance.h  accel_with_covariance_stamped.h  inertia.h  inertia_stamped.h  point.h  point32.h  point_stamped.h  polygon.h  polygon_stamped.h  pose.h  pose2d.h  pose_array.h  pose_stamped.h  pose_with_covariance.h  pose_with_covariance_stamped.h  quaternion.h  quaternion_stamped.h  transform.h  transform_stamped.h  twist.h  twist_stamped.h  twist_with_covariance.h  twist_with_covariance_stamped.h  vector3.h  vector3_stamped.h  wrench.h  wrench_stamped.h
include/rbc/msgs/nav_msgs/: map_meta_data.h  odometry.h  path.h
include/rbc/msgs/sensor_msgs/: fluid_pressure.h  image.h  image_impl.h  imu.h  joint_state.h  joy.h  temperature.h
include/rbc/msgs/service/: service_message.h
include/rbc/msgs/std_msgs/: color_rgba.h  float32.h  float64.h  header.h  int16.h  int32.h  int64.h  int8.h  std_msg.h  string.h  uint16.h  uint32.h  uint64.h  uint8.h
include/rbc/publisher/: rbc_publisher.h  rbc_publisher_impl.h  rbc_publishers.h
include/rbc/ros_types/: ros_types.h
include/rbc/service/: rbc_service.h  service_call.h  service_call_impl.h  service_call_message.h  service_call_message_impl.h  service_handler.h  service_handler_base.h  service_handler_impl.h
include/rbc/subscriber/: rbc_subscriber.h  rbc_subscriber_base.h  rbc_subscriber_impl.h  rbc_subscribers.h
include/rbc/utils/: deserializer.h  json.h  serializer.h
include/ros_bridge_client/: ros_bridge_client.h  ros_bridge_client_impl.h
include/ros_bridge_client/exceptions/: connection_exception.h  logger_init_exception.h
include/ros_bridge_client/logging/: logger.h  logger_impl.h
include/ros_bridge_client/msgs/: array_base.h  message.h  message_base.h  message_impl.h  rbc_array_message.h  rbc_message.h  rbc_subscribe_message.h  ros_type_base.h  xyzmessage.h
include/ros_bridge_client/msgs/geometry_msgs/: accel.h  accel_stamped.h  accel_with_covariance.h  accel_with_covariance_stamped.h  inertia.h  inertia_message.h  inertia_stamped.h  inertia_stamped_message.h  point.h  point2d.h  point32.h  point32_message.h  point_stamped.h  polygon.h  polygon_message.h  polygon_stamped.h  polygon_stamped_message.h  pose.h  pose2d.h  pose_2d_message.h  pose_array.h  pose_array_message.h  pose_message.h  pose_stamped.h  pose_stamped_message.h  pose_with_covariance.h  pose_with_covariance_stamped.h  quaternion.h  quaternion_message.h  quaternion_stamped.h  quaternion_stamped_message.h  transform.h  transform_message.h  transform_stamped.h  transform_stamped_message.h  twist.h  (+13 more)
include/ros_bridge_client/publisher/: publisher.h  rbc_publisher.h  rbc_publisher_impl.h  rbc_publishers.h
include/ros_bridge_client/ros_types/: ros_types.h
include/ros_bridge_client/service/: rbc_service.h
include/ros_bridge_client/subscriber/: rbc_subscriber.h  rbc_subscriber_base.h  rbc_subscriber_impl.h  rbc_subscribers.h  response_to_message.h
include/ros_bridge_client/utils/: deserializer.h  json_creator.h  response_converter.h  serializer.h
scripts/: array_rbc_msg.py  deps.sh  fancy_rbc_msg.py  generate_ints.py  generate_msg.py  generate_subscribers.py  generate_uints.py  generator.py  rbc_accel_subscriber.cpp  rbc_accel_subscriber.h  rbc_service_message.cpp  rbc_service_message.h  rbc_string_subscriber.cpp  rbc_string_subscriber.h  rbc_subscriber.py  simple_rbc_msg.py  std_rbc_msg.py  subscribe_message.cpp  subscribe_message.h
scripts/templates/: header_array.tmpl  header_fancy.tmpl  header_simple.tmpl  header_std_msgs.tmpl  header_subscriber.tmpl  impl_array.tmpl  impl_fancy.tmpl  impl_msg.tmpl  impl_simple.tmpl  impl_std_msgs.tmpl  impl_subscriber.tmpl  msg_header.tmpl
src/: CMakeLists.txt  ros_bridge_client.cxx
src/config_parser/: CMakeLists.txt  config_parser.cxx
src/msgs/: message_base.cpp  rbc_array_message.cpp  rbc_message.cpp
src/msgs/geometry_msgs/: accel.cxx  accel_message.cxx  accel_stamped.cxx  inertia.cxx  inertia_message.cpp  inertia_stamped.cxx  point.cxx  point_stamped.cxx  polygon_message.cpp  polygon_stamped_message.cpp  pose.cxx  pose_2d_message.cpp  quaternion_stamped.cxx  transform_stamped.cxx  twist_stamped_message.cpp  vector3.cxx  vector3_message.cpp  vector3_stamped.cxx  vector3_stamped_message.cpp  wrench.cxx  wrench_message.cpp  wrench_stamped_message.cpp
src/msgs/nav_msgs/: grid_cells_message.cpp
src/msgs/std_msgs/: color_rgba_message.cpp  header.cxx  int16_message.cpp
src/rbc/: CMakeLists.txt
src/rbc/service/: rbc_service.cpp  service_handler_base.cxx
src/rbc/utils/: deserializer.cxx  serializer.cxx
src/ros_bridge_client/: CMakeLists.txt
src/ros_bridge_client/msgs/: message_base.cpp  rbc_array_message.cpp  rbc_array_message.cxx  rbc_subscribe_message.cpp  ros_type_base.cpp  ros_type_base.cxx
src/ros_bridge_client/subscriber/: rbc_subscriber_base.cxx
src/ros_bridge_client/utils/: deserializer.cxx  json_creator.cxx  response_converter.cxx  serializer.cxx
src/service/: rbc_service.cpp
src/utils/: json_creator.cxx  response_converter.cxx
test/: CMakeLists.txt  a.h  b.h  callback.cpp  callback.h  example_config.json  manager.h  publisher.h  publisher_base.cpp  publisher_base.h  run_rosbridge.sh  run_valgrind.sh  subscriber.h  subscriber_base.cpp  subscriber_base.h  test_messages.csv
test/include/test/: csv_reader.h  full_test.h  message_test.h
test/src/: csv_reader.cxx  foo.cxx  full_test.cxx  messages_test.cpp  messages_test.cxx  response_test.cxx
(+138 files in other folders)
